Techno em construcao

--- a/exe_04/index.html
+++ b/exe_04/index.html
@@ -23,7 +23,7 @@
             },
             methods: {
                 puxarAcoes: function(){
-                    fetch('https://api.github.com/users/rpereira')
+                    fetch('https://api.github.com/users/ronniepereira')
                     .then(response => response.json())
                     .then(json => {
                         this.acoes = json
