--- a/projeto-techno/index.html
+++ b/projeto-techno/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
     <div id="app">
+        <header class="header">
+            <img class="logo" src="./assets/techno.svg" alt="Techno">
+            <div class="carrinho_menu" @click="carrinhoAtivo = true">{{carrinhoTotal | numeroPreco}} | {{carrinho.length}}</div>
+        </header>
+
         <section class="modal" v-if="produto" @click="fecharModal">
             <div class="modal_container">
                 <div class="modal_img">
@@ -18,10 +23,11 @@
                 </div>
                 <div class="modal_dados">
                     <button @click="produto=false" class="modal_fechar">X</button>
-                    <span class="modal_preco">{{produto.preco}}</span>
+                    <span class="modal_preco">{{produto.preco | numeroPreco}}</span>
                     <h2 class="modal_titulo">{{produto.nome}}</h2>
                     <p>{{produto.descricao}}</p>
-                    <button class="modal_btn">Adicionar Item</button>
+                    <button v-if="produto.estoque > 0" class="modal_btn" @click="adicionarItem">Adicionar Item</button>
+                    <button v-else class="modal_btn esgotado" disabled>Produto esgotado</button>
                 </div>
                 <div class="avaliacoes">
                     <h2 class="avaliacoes_subtitulo">Avaliações</h2>
@@ -44,6 +50,30 @@
                 </div>
             </div>
         </section>
+
+        <section class="carrinho_modal" :class="{ativo: carrinhoAtivo}" @click="clickForaCarrinho">
+            <div class="carrinho_container">
+                <button class="modal_fechar" @click="carrinhoAtivo = false">X</button>
+                <h2 class="carrinho_titulo">Carrinho</h2>
+                <div v-if="carrinho.length > 0">
+                    <ul>
+                        <li v-for="(item, index) in carrinho" class="carrinho_itens">
+                            <p>{{item.nome}}</p>
+                            <p class="carrinho_preco">{{item.preco | numeroPreco}}</p>
+                            <button class="carrinho_remover" @click="removerItem(index)">X</button>
+                        </li>
+                    </ul>
+                    <p class="carrinho_total">{{carrinhoTotal | numeroPreco}}</p>
+                    <button class="carrinho_finalizar">Finalizar Compra</button>
+                </div>
+                <p v-else>O carrinho está vazio</p>
+            </div>
+            
+        </section>
+
+        <div class="alerta" :class="{ativo: alertaAtivo}">
+            <p class="alerta_mensagem">{{mensagemAlerta}}</p>
+        </div>
     </div>
 
     <script src="./app.js"></script>
